# duet

./: .gitignore  LICENSE.md  README.md  config.niri.example.ini  meson.build
src/: brightness.c  brightness.h  cli.c  command.c  command.h  config.c  config.h  context.c  context.h  daemon.c  display.c  display.h  keyboard.c  keyboard.h  main.c  rotation.c  rotation.h
subprojects/: libcjson.wrap
